// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCodegenContext 1`] = `
"<template>
  <h1>Hello</h1>
  </template>
    "
`;

exports[`createNode 1`] = `
Object {
  "children": Array [],
  "codegenNode": undefined,
  "isSelfClosing": false,
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "source": "",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "ns": 0,
  "props": Array [],
  "tag": "h1",
  "tagType": 0,
  "type": 1,
}
`;

exports[`createProp 1`] = `
Object {
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "source": "",
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "name": "title",
  "type": 6,
  "value": Object {
    "content": "Title",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "source": "",
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": 2,
  },
}
`;

exports[`injectProps 1`] = `"<p title=\\"Title\\"></p>"`;

exports[`transformScript 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
var _default = {
  data() {
    return {
      greeting: 'Hello'
    };
  }

};
exports.default = _default;"
`;

exports[`transformStyle 1`] = `
"
p {
  width: 1rem;
  height: 1rem;
  font-size: 2em;
  text-align: center;
}
"
`;
